--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "gulp"
   },
   "devDependencies": {
-    "babelify": "^5.0.4",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babelify": "^7.2.0",
     "browserify": "^9.0.3",
     "gulp": "*",
     "gulp-babel": "^4.0.0",
