--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-babel": "^4.0.0",
     "gulp-server-livereload": "^1.2.1",
     "gulp-util": "^3.0.4",
+    "lodash": "^4.6.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
