--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^9.0.3",
     "gulp": "*",
